force-app/main/default/objects/Filenet__x/Filenet__x.object-meta.xml
<CustomObject>
    <description>FilenetSet</description>
    <externalDataSource>TCP_FileNet</externalDataSource>
    <externalName>FilenetSet</externalName>
    <label>Filenet</label>
    <pluralLabel>FilenetSet</pluralLabel>
</CustomObject>