force-app/main/default/objects/Filenet__x/fields/Coa__c.field-meta.xml
<CustomField>
    <fullName>Coa__c</fullName>
    <description>Coa</description>
    <externalDeveloperName>Coa</externalDeveloperName>
    <label>Coa</label>
    <length>1</length>
    <type>Text</type>
</CustomField>