force-app/main/default/objects/Filenet__x/fields/Document__c.field-meta.xml
<CustomField>
    <fullName>Document__c</fullName>
    <description>Document</description>
    <externalDeveloperName>Document</externalDeveloperName>
    <label>Document</label>
    <length>10</length>
    <type>Text</type>
</CustomField>