force-app/main/default/objects/Filenet__x/fields/Filenetid__c.field-meta.xml
<CustomField>
    <fullName>Filenetid__c</fullName>
    <description>Filenetid</description>
    <externalDeveloperName>Filenetid</externalDeveloperName>
    <label>Filenetid</label>
    <length>40</length>
    <type>Text</type>
</CustomField>