force-app/main/default/objects/Filenet__x/fields/Outputdesc__c.field-meta.xml
<CustomField>
    <fullName>Outputdesc__c</fullName>
    <description>Outputdesc</description>
    <externalDeveloperName>Outputdesc</externalDeveloperName>
    <label>Outputdesc</label>
    <length>132</length>
    <type>Text</type>
</CustomField>