force-app/main/default/objects/Filenet__x/fields/Outputtype__c.field-meta.xml
<CustomField>
    <fullName>Outputtype__c</fullName>
    <description>Outputtype</description>
    <externalDeveloperName>Outputtype</externalDeveloperName>
    <label>Outputtype</label>
    <length>25</length>
    <type>Text</type>
</CustomField>