force-app/main/default/objects/Filenet__x/fields/Reserve__c.field-meta.xml
<CustomField>
    <fullName>Reserve__c</fullName>
    <description>Reserve</description>
    <externalDeveloperName>Reserve</externalDeveloperName>
    <label>Reserve</label>
    <length>27</length>
    <type>Text</type>
</CustomField>