force-app/main/default/objects/Filenet__x/fields/Uri__c.field-meta.xml
<CustomField>
    <fullName>Uri__c</fullName>
    <description>Uri</description>
    <externalDeveloperName>Uri</externalDeveloperName>
    <label>Uri</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>