force-app/main/default/objects/Filenet__x/fields/Zsectyp__c.field-meta.xml
<CustomField>
    <fullName>Zsectyp__c</fullName>
    <description>Zsectyp</description>
    <externalDeveloperName>Zsectyp</externalDeveloperName>
    <label>Zsectyp</label>
    <length>1</length>
    <type>Text</type>
</CustomField>